--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/moromuro/oneshotsquad/issues"
   },
-  "homepage": "https://github.com/moromuro/oneshotsquad",
+  "homepage": "https://oneshotsquad.info",
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
